swagger, readme and issue fix
